upload de fichier

--- a/admin/tpl/addUser.phtml
+++ b/admin/tpl/addUser.phtml
@@ -20,10 +20,10 @@
     <input type="text" name="mail" id="mail" value="<?= $data['mail'];?>">
 
     <label for="password">password</label>
-    <input type="password" name="password" id="password" value="<?= $data['password'];?>">
+    <input type="password" name="password" id="password" value="">
 
     <label for="password2">password</label>
-    <input type="password" name="password2" id="password2" value="<?= $data['password2'];?>">
+    <input type="password" name="password2" id="password2" value="">
 
     <label for="pseudo">pseudo</label>
     <input type="text" name="pseudo" id="pseudo" value="<?= $data['pseudo'];?>">
