--- a/admin/tpl/layout.phtml
+++ b/admin/tpl/layout.phtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title><?=$title;?></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    
     
 </head>
 <body>
@@ -17,6 +17,7 @@
 include('tpl/'.$vue);
 
 ?>
-
+<a href="index.php">Home</a>
+<a href="logOut.php">Log out</a>
 </body>
 </html>
